fix homepage layout on mobile

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -15,4 +15,4 @@ body{
 
 
 // layout
-.maxwidth{ width:100%; max-width:800px; margin-left:auto; margin-right:auto; }
+.maxwidth{ width:90%; max-width:800px; margin-left:auto; margin-right:auto; }
