--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,6 +5,8 @@
 .right{ float:right; }
 
 .align-center{ text-align:center;}
+.align-left{ text-align:left;}
+.align-right{ text-align:right;}
 
 .space{
   height:40px;
